--- a/plugin.yaml
+++ b/plugin.yaml
@@ -14,6 +14,11 @@ library:
   entry_point:
   - OverlandFlow=landlab.bmi.components:OverlandFlow
   - Flexure=landlab.bmi.components:Flexure
+  - LinearDiffuser=landlab.bmi.components:LinearDiffuser
+  - ExponentialWeatherer=landlab.bmi.components:ExponentialWeatherer
+  - TransportLengthHillslopeDiffuser=landlab.bmi.components:TransportLengthHillslopeDiffuser
+  - Vegetation=landlab.bmi.components:Vegetation
+  - SoilMoisture=landlab.bmi.components:SoilMoisture
   language: python
   register: ''
 plugin:
