fix: update metadata files

--- a/pymt_landlab/data/Flexure/flexure.yaml
+++ b/pymt_landlab/data/Flexure/flexure.yaml
@@ -9,6 +9,6 @@ clock:
   stop: {{ clock_stop }}
   step: {{ clock_step }}
 grid:
-  raster_model_grid:
+  RasterModelGrid:
     args: [{{ grid_rows }}, {{ grid_columns }}]
     xy_spacing: [{{ grid_column_spacing }}, {{ grid_row_spacing }}]
