--- a/pymt_landlab/data/TransportLengthHillslopeDiffuser/transport_length_hillslope_diffuser.yaml
+++ b/pymt_landlab/data/TransportLengthHillslopeDiffuser/transport_length_hillslope_diffuser.yaml
@@ -7,6 +7,14 @@ clock:
   stop: {{ clock_stop }}
   step: {{ clock_step }}
 grid:
-  raster_model_grid:
+  RasterModelGrid:
     args: [{{ grid_rows }}, {{ grid_columns }}]
     xy_spacing: [{{ grid_column_spacing }}, {{ grid_row_spacing }}]
+    fields:
+      node:
+        flow__receiver_node:
+          - constant:
+              value: 0
+        topographic__steepest_slope:
+          - constant:
+              value: 0
