--- a/pymt_landlab/data/LinearDiffuser/linear_diffuser.yaml
+++ b/pymt_landlab/data/LinearDiffuser/linear_diffuser.yaml
@@ -5,6 +5,11 @@ clock:
   stop: {{ clock_stop }}
   step: {{ clock_step }}
 grid:
-  raster_model_grid:
+  RasterModelGrid:
     args: [{{ grid_rows }}, {{ grid_columns }}]
     xy_spacing: [{{ grid_column_spacing }}, {{ grid_row_spacing }}]
+    fields:
+      node:
+        topographic__elevation:
+          - constant:
+              value: 0.0
