--- a/pymt_landlab/data/Vegetation/vegetation.yaml
+++ b/pymt_landlab/data/Vegetation/vegetation.yaml
@@ -39,6 +39,11 @@ clock:
   stop: {{ clock_stop }}
   step: {{ clock_step }}
 grid:
-  raster_model_grid:
+  RasterModelGrid:
     args: [{{ grid_rows }}, {{ grid_columns }}]
     xy_spacing: [{{ grid_column_spacing }}, {{ grid_row_spacing }}]
+    fields:
+      cell:
+        vegetation__plant_functional_type:
+          - constant:
+              value: 0
