--- a/pymt_landlab/data/Flexure/flexure.yaml
+++ b/pymt_landlab/data/Flexure/flexure.yaml
@@ -8,6 +8,7 @@ clock:
   start: {{ clock_start }}
   stop: {{ clock_stop }}
   step: {{ clock_step }}
+  units: "yr"
 grid:
   RasterModelGrid:
     args: [{{ grid_rows }}, {{ grid_columns }}]
