--- a/pymt_landlab/data/FlowDirectorDINF/flow_director_dinf.yaml
+++ b/pymt_landlab/data/FlowDirectorDINF/flow_director_dinf.yaml
@@ -5,7 +5,7 @@ clock:
   start: {{ clock_start }}
   stop: {{ clock_stop }}
   step: {{ clock_step }}
-  units: ""
+  units: "d"
 grid:
   RasterModelGrid:
     args: [{{ grid_rows }}, {{ grid_columns }}]
