--- a/pymt_landlab/data/StreamPowerEroder/stream_power_eroder.yaml
+++ b/pymt_landlab/data/StreamPowerEroder/stream_power_eroder.yaml
@@ -8,7 +8,7 @@ clock:
   start: {{ clock_start }}
   stop: {{ clock_stop }}
   step: {{ clock_step }}
-  units: ""
+  units: "d"
 grid:
   RasterModelGrid:
     args: [{{ grid_rows }}, {{ grid_columns }}]
