fix: use choice data type for D4/D8

--- a/pymt_landlab/data/FlowAccumulator/parameters.yaml
+++ b/pymt_landlab/data/FlowAccumulator/parameters.yaml
@@ -2,8 +2,10 @@ flow_director:
   description: The method used to calculate flow directionsa (one of "D4" or "D8")
   value:
     default: D4
-    type: string
-    units: ''
+    type: choice
+    choices:
+      - D4
+      - D8
 
 grid_rows:
   description: Number of rows in the grid.
