--- a/pymt_landlab/data/FlowRouter/parameters.yaml
+++ b/pymt_landlab/data/FlowRouter/parameters.yaml
@@ -1,10 +1,12 @@
 method:
   description: |
-    Routing method ('D8' is the default). This keyword has no effect for a Voronoi-based grid.
+    Routing method ('D8' is the default).
   value:
     default: D8
-    type: string
-    units: ''
+    type: choice
+    choices:
+      - D4
+      - D8
 
 grid_rows:
   description: Number of rows in the grid.
