install dev versions of landlab and pymt

--- a/.travis.yml
+++ b/.travis.yml
@@ -43,9 +43,7 @@ before_install:
 - source activate test_env
 install:
 - pip install numpy bmi-tester model_metadata standard_names pytest
-- conda install pymt -c conda-forge
-- conda uninstall --force landlab
-- pip install git+https://github.com/landlab/landlab.git@mcflugen/add-bc-to-bmi
+- conda install pymt -c conda-forge -c conda-forge/label/dev
 - pip install . -r requirements.txt
 script:
 - python -c 'import pymt_landlab'
